language/move-lang/tests/move_check/typing/pack_multiple.exp
error: 

   ┌── tests/move_check/typing/pack_multiple.move:2:16 ───
   │
 5 │         Box { f: (0, 1) };
   │         ^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 5 │         Box { f: (0, 1) };
   │         ----------------- The type: 0x8675309::M::Box<_>
   ·
 2 │     struct Box<T> { f: T }
   │                - Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/pack_multiple.move:5:9 ───
   │
 5 │         Box { f: (0, 1) };
   │         ^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
   │

error: 

   ┌── tests/move_check/typing/pack_multiple.move:5:9 ───
   │
 5 │         Box { f: (0, 1) };
   │                  ^^^^^^ Invalid argument for field 'f' for '0x8675309::M::Box'
   ·
 5 │         Box { f: (0, 1) };
   │                  ------ The type: '(u64,u64)'
   ·
 5 │         Box { f: (0, 1) };
   │         ----------------- Is not compatible with: '_'
   │

error: 

   ┌── tests/move_check/typing/pack_multiple.move:2:16 ───
   │
 6 │         Box { f: (0, 1, 2) };
   │         ^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 6 │         Box { f: (0, 1, 2) };
   │         -------------------- The type: 0x8675309::M::Box<_>
   ·
 2 │     struct Box<T> { f: T }
   │                - Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/pack_multiple.move:6:9 ───
   │
 6 │         Box { f: (0, 1, 2) };
   │         ^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
   │

error: 

   ┌── tests/move_check/typing/pack_multiple.move:6:9 ───
   │
 6 │         Box { f: (0, 1, 2) };
   │                  ^^^^^^^^^ Invalid argument for field 'f' for '0x8675309::M::Box'
   ·
 6 │         Box { f: (0, 1, 2) };
   │                  --------- The type: '(u64,u64,u64)'
   ·
 6 │         Box { f: (0, 1, 2) };
   │         -------------------- Is not compatible with: '_'
   │

error: 

   ┌── tests/move_check/typing/pack_multiple.move:2:16 ───
   │
 7 │         Box { f: (true, Box { f: 0 }) };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 7 │         Box { f: (true, Box { f: 0 }) };
   │         ------------------------------- The type: 0x8675309::M::Box<_>
   ·
 2 │     struct Box<T> { f: T }
   │                - Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/pack_multiple.move:7:9 ───
   │
 7 │         Box { f: (true, Box { f: 0 }) };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
   │

error: 

   ┌── tests/move_check/typing/pack_multiple.move:7:9 ───
   │
 7 │         Box { f: (true, Box { f: 0 }) };
   │                  ^^^^^^^^^^^^^^^^^^^^ Invalid argument for field 'f' for '0x8675309::M::Box'
   ·
 7 │         Box { f: (true, Box { f: 0 }) };
   │                  -------------------- The type: '(bool,0x8675309::M::Box<u64>)'
   ·
 7 │         Box { f: (true, Box { f: 0 }) };
   │         ------------------------------- Is not compatible with: '_'
   │

